Improvements to navbar

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@ Date: 12/1/2021
     <nav class="nav-container">
         <a href="index.html" class="logo">Trexxin<span style="color: #6C63FF">.dev</span></a>
         <ul class="nav-links">
-            <li class="nav-item"><a href="#">home</a></li>
-            <li class="nav-item"><a href="#">skills</a></li>
-            <li class="nav-item"><a href="#">projects</a></li>
+            <li class="nav-item"><a href="#hero">home</a></li>
+            <li class="nav-item"><a href="#skills">skills</a></li>
+            <li class="nav-item"><a href="#projects">projects</a></li>
         </ul>
     </nav>
     <section class="#">
-        <div class="hero">
+        <div class="hero" id="hero">
             <div class="content">
                 <h1>Charles Harris</h1>
                 <div class="subtitle">
@@ -57,7 +57,7 @@ Date: 12/1/2021
         </div>
     </section>
     <!-- Skill Section -->
-    <section class="skills">
+    <section class="skills"  id="skills">
         <div class="skills-heading">
             <h2 class="skill-header">Skills</h2>
             <h3 class="skill-header-subtitle">Languages & Tools</h3>
@@ -123,7 +123,7 @@ Date: 12/1/2021
         </div>
     </section>
     <!-- Project Section -->
-    <section class="projects">
+    <section class="projects" id="projects">
         <div class="projects_header">Projects</div>
 
         <div class="portfolio-container1">
