Styled the projects sections

--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@ Date: 12/1/2021
                     <a class="contact-icon" href="#"><img src="images/linkedin.png" alt="linkedin"></a>
                 </div>
                 -->
+                <a href="#skills">
                 <svg id="call-to-action" height="81" viewBox="0 0 227 81">
                     <g id="Group_1" data-name="Group 1" transform="translate(-140 -795)">
                         <path id="Path_52" data-name="Path 52" d="M40.5,0h146a40.5,40.5,0,0,1,0,81H40.5a40.5,40.5,0,0,1,0-81Z" transform="translate(140 795)" fill="#6c63ff"/>
                         <text id="LearnMore" data-name="Learn More!" transform="translate(151 818)" fill="#fff" font-size="28" font-family="Montserrat-SemiBold, Montserrat" font-weight="600"><tspan x="17.184" y="27">Learn More!</tspan></text>
                     </g>
                 </svg>
+                </a>
             </div>
             <!--Main Hero Image-->
             <img class="hero-image" src="images/pair_programming.svg" alt="#">
@@ -67,7 +69,7 @@ Date: 12/1/2021
                 <!--Front End-->
                 <p class="inner-skill-header">Front End</p>
                 <svg id="inner-skill-header-accent" width="81" height="5" viewBox="0 0 81 5">
-                    <rect id="Rectangle_6" data-name="Rectangle 6" width="81" height="5" rx="2.5" fill="#22d1ee"/>
+                    <rect id="Rectangle_6" data-name="Rectangle 6" width="81" height="5" rx="2.5" fill="#6C63FF"/>
                 </svg>
                 <div class="skills-icon">
                     <!--Html-->
@@ -86,7 +88,7 @@ Date: 12/1/2021
                 <!--Back End-->
                 <p class="inner-skill-header">Back End</p>
                 <svg id="inner-skill-header-accent" width="81" height="5" viewBox="0 0 81 5">
-                    <rect id="Rectangle_6" data-name="Rectangle 6" width="81" height="5" rx="2.5" fill="#22d1ee"/>
+                    <rect id="Rectangle_6" data-name="Rectangle 6" width="81" height="5" rx="2.5" fill="#6C63FF"/>
                 </svg>
                 <div class="skills-icon">
                     <!--Python-->
@@ -100,7 +102,7 @@ Date: 12/1/2021
                 <!--Tools-->
                 <p class="inner-skill-header">Tools</p>
                 <svg id="inner-skill-header-accent" width="81" height="5" viewBox="0 0 81 5">
-                    <rect id="Rectangle_6" data-name="Rectangle 6" width="81" height="5" rx="2.5" fill="#22d1ee"/>
+                    <rect id="Rectangle_6" data-name="Rectangle 6" width="81" height="5" rx="2.5" fill="#6C63FF"/>
                 </svg>
                 <div class="skills-icon">
                     <!--Github-->
@@ -125,16 +127,37 @@ Date: 12/1/2021
     <!-- Project Section -->
     <section class="projects" id="projects">
         <div class="projects_header">Projects</div>
-
+        <!--Trexx Bot-->
         <div class="portfolio-container1">
-            <p class="portfolio-title">Trexx Bot</p>
-            <img src="#" alt="#">
-            <p class="portfolio-desc">My first bot made with python and the first time I interacted with api's. The project was written with discord.py and serves many purposes with the main function being a casino bot.</p>
+            <img class="project-background" src="images/project-background.png" alt="#">
+            <div class="project-preview">
+                <img src="images/Trexx-bot.png" alt="Trexx Bot">
+            </div>
+            <div class="inner-portfolio">
+                <div class="portfolio-title">
+                    <p>Trexx Bot</p>
+                    <svg width="100%" height="15" viewBox="0 0 100% 15">
+                        <rect id="Rectangle_84" data-name="Rectangle 84" width="100%" height="15" rx="7.5" fill="#6C63FF"/>
+                    </svg>
+                </div>
+                <p class="portfolio-desc">My first bot made with python and the first time I interacted with api's. The project was written with <span style="color: #6C63FF">discord.py</span> and serves many purposes with the main function being a casino bot.</p>
+            </div>
         </div>
+        <!--Wild Rescues-->
         <div class="portfolio-container2">
-            <p class="portfolio-title">Wild Rescues</p>
-            <img src="#" alt="#">
-            <p class="portfolio-desc">A simple website created for my web development class using Html and Css. It is styled as an animal rescue website.</p>
+            <img class="project-background" src="images/project-background.png" alt="#">
+            <div class="project-preview">
+                <img src="images/wild-rescues.png" alt="Wild Rescues">
+            </div>
+            <div class="inner-portfolio">
+                <div class="portfolio-title">
+                    <p>Wild Rescues</p>
+                    <svg width="100%" height="15" viewBox="0 0 100% 15">
+                        <rect id="Rectangle_84" data-name="Rectangle 84" width="100%" height="15" rx="7.5" fill="#6C63FF"/>
+                    </svg>
+                </div>
+                <p class="portfolio-desc">A simple website created for my web development class using <span style="color: #6C63FF">Html</span> and <span style="color: #6C63FF">Css</span>. It is styled as an animal rescue website.</p>
+            </div>
         </div>
     </section>
 </body>
