Added function to the call to action button

--- a/index.html
+++ b/index.html
@@ -45,14 +45,7 @@ Date: 12/1/2021
                     <a class="contact-icon" href="#"><img src="images/linkedin.png" alt="linkedin"></a>
                 </div>
                 -->
-                <a href="#skills">
-                <svg id="call-to-action" height="81" viewBox="0 0 227 81">
-                    <g id="Group_1" data-name="Group 1" transform="translate(-140 -795)">
-                        <path id="Path_52" data-name="Path 52" d="M40.5,0h146a40.5,40.5,0,0,1,0,81H40.5a40.5,40.5,0,0,1,0-81Z" transform="translate(140 795)" fill="#6c63ff"/>
-                        <text id="LearnMore" data-name="Learn More!" transform="translate(151 818)" fill="#fff" font-size="28" font-family="Montserrat-SemiBold, Montserrat" font-weight="600"><tspan x="17.184" y="27">Learn More!</tspan></text>
-                    </g>
-                </svg>
-                </a>
+                <a href="#skills"><button id="learn-more" type="button" >Learn More!</button></a>
             </div>
             <!--Main Hero Image-->
             <img class="hero-image" src="images/pair_programming.svg" alt="#">
