Added more function & finished footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ Date: 12/1/2021
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <script src="https://kit.fontawesome.com/39c0e90b6d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap" rel="stylesheet">
@@ -38,14 +39,7 @@ Date: 12/1/2021
                 <div class="about">
                     <p>I'm a web developer and aspiring software engineer who wants to delve deeper into the world of tech. Learn more about what I know and what I have done below!</p>
                 </div>
-                <!--HIDDEN FOR VISUAL PURPOSES
-                <div class="contact">
-                    <a class="contact-icon" href="#"><img src="images/gmail.png" alt="gmail"></a>
-                    <a class="contact-icon" href="#"><img src="images/github.png" alt="github"></a>
-                    <a class="contact-icon" href="#"><img src="images/linkedin.png" alt="linkedin"></a>
-                </div>
-                -->
-                <a href="#skills"><button id="learn-more" type="button" >Learn More!</button></a>
+                <a href="#skills"><button type="button" >Learn More!</button></a>
             </div>
             <!--Main Hero Image-->
             <img class="hero-image" src="images/pair_programming.svg" alt="#">
@@ -128,12 +122,13 @@ Date: 12/1/2021
             </div>
             <div class="inner-portfolio">
                 <div class="portfolio-title">
-                    <p>Trexx Bot</p>
+                    <p>Trex Bot</p>
                     <svg width="100%" height="15" viewBox="0 0 100% 15">
                         <rect id="Rectangle_84" data-name="Rectangle 84" width="100%" height="15" rx="7.5" fill="#6C63FF"/>
                     </svg>
                 </div>
                 <p class="portfolio-desc">My first bot made with python and the first time I interacted with api's. The project was written with <span style="color: #6C63FF">discord.py</span> and serves many purposes with the main function being a casino bot.</p>
+                <a href="https://github.com/Trexxin/Trex-Bot"><button type="button" ><i class="github fab fa-github fa-1x"></i>Github</button></a>
             </div>
         </div>
         <!--Wild Rescues-->
@@ -150,11 +145,18 @@ Date: 12/1/2021
                     </svg>
                 </div>
                 <p class="portfolio-desc">A simple website created for my web development class using <span style="color: #6C63FF">Html</span> and <span style="color: #6C63FF">Css</span>. It is styled as an animal rescue website.</p>
+                <a href="https://github.com/Trexxin/Wildlife-Rescue"><button type="button" ><i class="github fab fa-github fa-1x"></i>Github</button></a>
+                <a href="#skills"><button type="button" ><i class="link fas fa-link fa-1x"></i>Website</button></a>
             </div>
         </div>
     </section>
 </body>
 <footer>
-    <p>Made by Charles Harris @2021</p>
+    <p>Made by Charles Harris &copy;2021</p>
+    <div class="contact">
+        <a class="contact-icon" href="mailto:charlesharris2322@gmail.com"><img src="images/gmail.png" alt="gmail"></a>
+        <a class="contact-icon" href="https://github.com/Trexxin"><img src="images/github.png" alt="github"></a>
+        <a class="contact-icon" href="https://www.linkedin.com/in/charles-harris-838061223/"><img src="images/linkedin.png" alt="linkedin"></a>
+    </div>
 </footer>
 </html>
