Added reminders for better responsiveness
The content in the projects containers will not respond accordingly to diffrent viewports. Need to nest portfolio content within the background. (For desktop Viewport).

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ Date: 12/1/2021
     <section class="projects" id="projects">
         <div class="projects_header">Projects</div>
         <!--Trexx Bot-->
+        <!--NEED TO NEST PORTFOLIO IN THE CONFINES OF THE CONTAINER BACKGROUND-->
         <div class="portfolio-container1">
             <img class="project-background" src="images/project-background.png" alt="#">
             <div class="project-preview">
@@ -132,6 +133,7 @@ Date: 12/1/2021
             </div>
         </div>
         <!--Wild Rescues-->
+        <!--NEED TO NEST PORTFOLIO IN THE CONFINES OF THE CONTAINER BACKGROUND-->
         <div class="portfolio-container2">
             <img class="project-background" src="images/project-background.png" alt="#">
             <div class="project-preview">
